# pySocket

./: index.html  pyproject.toml  runserver.py  setup.py
pysocket/: __init__.py  apps.py  asgi.py  settings.py  socketServer.py
pysocket.egg-info/: PKG-INFO  SOURCES.txt
pysocket/asgi/: __init__.py  adapter.py
pysocket/connectionEngine/: __init__.py  connection.py
pysocket/middleware/: __init__.py  base.py
pysocket/routing/: __init__.py  router.py
pysocket/serverConfig/: __init__.py  consumer.py  socketServer.py
