[project]
name = "pysocket"
version = "0.1.0"
description = "A simple real-time WebSocket server for Python/Django"
readme = "README.md"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = "MIT"
keywords = ["websockets", "realtime", "django", "socket.io", "rooms"]
requires-python = ">=3.8"
dependencies = [
  "websockets>=11.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
